# memory-allocator

./: CMakeLists.txt  README.md
examples/: example_usage.cpp
include/: memory_allocator.h
src/: memory_allocator.cpp
tests/: benchmark.cpp  test_memory_allocator.cpp
